# UltraRay

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py  scene_loader.py
src/configs/: cylinder_convex.txt  vertebrae_convex.txt
ultra_ray/: __init__.py
ultra_ray/beamformers/: beamformer_ultraspy.py
ultra_ray/films/: transducer_film.py
ultra_ray/integrators/: acoustic_prb_volpath.py  common.py
ultra_ray/render/: echo_block.py
ultra_ray/sensors/: __init__.py  convex_transducer.py
ultra_ray/utils/: create_convex_transducer_mesh.py
